renamed options <ServerIP>, <ServerPort> and <ServerPassword> to <ControlIP>, <ControlPort> and <ControlPassword> to avoid confusion with news-server options <ServerX.Host>, <ServerX.Port> and <ServerX.Password>; the old option names are still recognized and are automatically renamed when the configuration is saved from web-interface; also renamed option <> to <MainDir>
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@477 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -21,10 +21,9 @@
 
 # Root directory for all tasks.
 #
-# MAINDIR is a variable and therefore starts with "$".
 # On POSIX you can use "~" as alias for home directory (e.g. "~/download").
 # On Windows use absolute paths (e.g. "C:\Download").
-$MAINDIR=~/download
+MainDir=~/download
 
 # Destination-directory to store downloaded files.
 DestDir=${MainDir}/dst
@@ -150,18 +149,21 @@ Server1.Connections=4
 # addresses. If you want NZBGet to listen to all interfaces and be available from
 # all IP-addresses use value "0.0.0.0".
 #
+# NOTE: When you start NZBGet as client (to send remote commands to NZBGet server) and
+# the option <ControlIP> is set to "0.0.0.0" the client will use IP "127.0.0.1".
+#
 # NOTE: If you set the option to "127.0.0.1" you will be able to connect to NZBGet
 # only from the computer running NZBGet. This restriction applies to web-interface too.
-ServerIp=127.0.0.1
+ControlIP=0.0.0.0
 
 # Port which NZBGet server and remote client use (1-65535).
-ServerPort=6789
+ControlPort=6789
 
 # Password which NZBGet server and remote client use.
 #
 # For authorization to web-interface use predefined username "nzbget" (not configurable)
 # and the password defined here.
-ServerPassword=tegbzn6789
+ControlPassword=tegbzn6789
 
 # See also option <LogBufferSize> in section "LOGGING"
 
@@ -172,7 +174,7 @@ ServerPassword=tegbzn6789
 # User name for daemon-mode, POSIX only.
 #
 # Set the user that the daemon normally runs at (POSIX in daemon-mode only).
-# Set $MainDir with an absolute path to be sure where it will write.
+# Set MainDir with an absolute path to be sure where it will write.
 # This allows NZBGet daemon to be launched in rc.local (at boot), and
 # download items as a specific user id.
 #
