categories can now have their own destination directories
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@524 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -589,12 +589,18 @@ UrlConnections=4
 
 # Category name.
 #
-# Each nzb-file can be assigned to a category. If the option <AppendCategoryDir>
-# is active, the program creates a subdirectory with category name within
-# destination directory.
+# Each nzb-file can be assigned to a category.
 # Category name is passed to post-processing script and can be used by it
 # to perform category specific processing.
 Category1.Name=Movies
+
+# Destination directory for this category.
+#
+# If this option is empty, then the default destination directory
+# (option <DestDir>) is used. In this case if the option <AppendCategoryDir>
+# is active, the program creates a subdirectory with category name within
+# destination directory.
+Category1.DestDir=
 
 Category2.Name=Series
 Category3.Name=Music
