added full par-scan feature needed to par-check/repair files which were renamed after creation of par-files; new option <ParScan> to activate full par-scan (always or automatic); the automatic full par-scan activates if missing files are detected during par-check, this avoids unnecessary full scan for normal (not renamed) par sets
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@525 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/configure.ac
+++ b/configure.ac
@@ -4,7 +4,7 @@
 AC_PREREQ(2.59)
 AC_INIT(nzbget, 10.0-testing, hugbug@users.sourceforge.net)
 AC_CANONICAL_SYSTEM
-AM_INIT_AUTOMAKE(nzbget, 10.0-testing)
+AM_INIT_AUTOMAKE(nzbget, 9.0-testing)
 AC_CONFIG_SRCDIR([nzbget.cpp])
 AC_CONFIG_HEADERS([config.h])
 
@@ -338,6 +338,32 @@ if test "$ENABLEPARCHECK" = "yes"; then
 		AC_MSG_RESULT([[yes]])
 		AC_DEFINE([HAVE_PAR2_CANCEL], 1, [Define to 1 if libpar2 supports cancelling (needs a special patch)]),
 		AC_MSG_RESULT([[no]]))
+
+	dnl
+	dnl check if libpar2 has recent bugfixes-patch
+	dnl
+	AC_MSG_CHECKING(whether libpar2 has recent bugfixes-patch (version 2))
+	AC_TRY_COMPILE(
+		[#include <libpar2/par2cmdline.h>]
+		[#include <libpar2/par2repairer.h>]
+		[ class Repairer : public Par2Repairer { void test() { BugfixesPatchVersion2(); } }; ],
+		[],
+		AC_MSG_RESULT([[yes]])
+		PAR2PATCHV2=yes
+		AC_DEFINE([HAVE_PAR2_BUGFIXES_V2], 1, [Define to 1 if libpar2 has recent bugfixes-patch (version 2)]),
+		AC_MSG_RESULT([[no]])
+		PAR2PATCHV2=no)
+
+	if test "$PAR2PATCHV2" = "no" ; then
+		AC_ARG_ENABLE(libpar2-bugfixes-check,
+			[AS_HELP_STRING([--disable-libpar2-bugfixes-check], [do not check if libpar2 has recent bugfixes-patch applied])],
+			[ PAR2PATCHCHECK=$enableval ],
+			[ PAR2PATCHCHECK=yes] )
+		if test "$PAR2PATCHCHECK" = "yes"; then
+			AC_ERROR([Your version of libpar2 doesn't include the recent bugfixes-patch (version 2, updated Dec 3, 2012). Please patch libpar2 with the patches supplied with NZBGet (see README for details). If you cannot patch libpar2, you can use configure parameter --disable-libpar2-bugfixes-check to suppress the check. Please note however that in this case the program may crash during par-check/repair. The patch is highly recommended!])
+		fi
+	fi
+
 else
 	AC_DEFINE([DISABLE_PARCHECK],1,[Define to 1 to disable smart par-verification and restoration])
 fi
