addition to r525: updated config.h.in
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@529 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/config.h.in
+++ b/config.h.in
@@ -67,6 +67,9 @@
 /* Define to 1 to use OpenSSL library for TLS/SSL-support. */
 #undef HAVE_OPENSSL
 
+/* Define to 1 if libpar2 has recent bugfixes-patch (version 2) */
+#undef HAVE_PAR2_BUGFIXES_V2
+
 /* Define to 1 if libpar2 supports cancelling (needs a special patch) */
 #undef HAVE_PAR2_CANCEL
 
