added support for HTTPS to the built-in web-server (web-interface and XML/JSON-RPC); new options <SecureControl>, <SecurePort>, <SecureCert> and <SecureKey>; Module <TLS.c/h> completely rewritten with support for servers-side sockets, newer versions of GnuTLS, proper thread lockings in OpenSSL
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@542 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -157,6 +157,9 @@ Server1.Connections=4
 ControlIP=0.0.0.0
 
 # Port which NZBGet server and remote client use (1-65535).
+#
+# NOTE: The communication via this port is not encrypted. For encrypted
+# communication see option <SecurePort>.
 ControlPort=6789
 
 # Password which NZBGet server and remote client use.
@@ -165,7 +168,22 @@ ControlPort=6789
 # and the password defined here.
 ControlPassword=tegbzn6789
 
-# See also option <LogBufferSize> in section "LOGGING"
+# Secure control of NZBGet server (yes, no).
+#
+# Activate the option if you want to access NZBGet built-in web-server 
+# via HTTPS (web-interface and RPC). You should also provide certificate
+# and key files, see option <SecureCert> and option <SecureKey>.
+SecureControl=no
+
+# Port which NZBGet server and remote client use for encrypted
+# communication (1-65535).
+SecurePort=6791
+
+# Full path to certificate file for encrypted communication.
+SecureCert=
+
+# Full path to key file for encrypted communication.
+SecureKey=
 
 
 ##############################################################################
@@ -750,8 +768,8 @@ ParRepair=yes
 #
 # NOTE: for par-check/repair NZBGet uses library libpar2. The last and
 # widely used version 0.2 of the library has few bugs, sometimes causing
-# a crash of the program. This is especially true when using "full" or
-# "auto" par-scan. NZBGet is supplied with patches addressing these
+# a crash of the program. This is expecially true when using "full" or
+# "auto" par-scan. NZBGet is supplied with patches addressing this
 # issues. Please apply the patches to libpar2 and recompile it.
 ParScan=limited
 
