improved the automatic par-scan (option <ParScan=auto>) to significantly reduce the verify-time in some common cases with renamed rar-files: 1) the extra files are scanned in an optimized order; 2) the scan stops when all missings files are found
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@543 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -763,15 +763,15 @@ ParRepair=yes
 #   full    - scan all files in the directory. This helps if the
 #             files were renamed after creating of par-set.
 #   auto    - a limited scan is performed first. If the par-checker 
-#             detects missing files, it scans all files in the 
-#             directory which were not scanned yet.
+#             detects missing files, it scans other files in the 
+#             directory until all required files are found.
 #
 # NOTE: for par-check/repair NZBGet uses library libpar2. The last and
 # widely used version 0.2 of the library has few bugs, sometimes causing
-# a crash of the program. This is expecially true when using "full" or
-# "auto" par-scan. NZBGet is supplied with patches addressing this
+# a crash of the program. This is especially true when using "full" or
+# "auto" par-scan. NZBGet is supplied with patches addressing these
 # issues. Please apply the patches to libpar2 and recompile it.
-ParScan=limited
+ParScan=auto
 
 # Use only par2-files with matching names (yes, no).
 #
