--- a/nzbget.conf
+++ b/nzbget.conf
@@ -66,7 +66,6 @@ LogFile=${DestDir}/nzbget.log
 # it is also used to serve JSON-/XML-RPC requests.
 WebDir=
 
-
 ##############################################################################
 ### NEWS-SERVERS                                                           ###
 
@@ -738,7 +737,11 @@ UpdateInterval=200
 # Paused files remain in queue and can be unpaused by parchecker when needed.
 LoadPars=one
 
-# Automatic par-verification (yes, no).
+# Force par-verification (yes, no).
+#
+# Force par-check for every download. When set to "no" the par-check is
+# performed only if the unpacker or the post-processing script detect a
+# damaged download.
 #
 # To download only needed par2-files (smart par-files loading) set also
 # the option <LoadPars> to "one". If option <LoadPars> is set to "all",
@@ -751,7 +754,7 @@ ParCheck=no
 #
 # If option <ParCheck> is enabled and <ParRepair> is not, the program
 # only verifies downloaded files and downloads needed par2-files, but does
-# not start repair-process. This is useful if the server does not have
+# not start repair-process. This is useful if computer does not have
 # enough CPU power, since repairing of large files may take too much
 # resources and time on a slow computers.
 ParRepair=yes
@@ -823,7 +826,7 @@ ParTimeLimit=0
 # NOTE: If parchecker needs additional par-files it temporarily unpauses
 # the queue.
 #
-# NOTE: See also option <PostPauseQueue>.
+# NOTE: See also options <PostPauseQueue> and <UnpackPauseQueue>.
 ParPauseQueue=no
 
 # Cleanup download queue after successful check/repair (yes, no).
@@ -840,37 +843,109 @@ NzbCleanupDisk=no
 
 
 ##############################################################################
+### UNPACK                                                                 ###
+
+# Unpack downloaded nzb-files (yes, no).
+#
+# If the download is damaged and could not be repaired using par-files
+# the unpacking is not performed.
+#
+# If the option <ParCheck> is disabled the program will try to unpack
+# downloaded files first. If the unpacking fails the par-check/repair
+# is performed and the unpack will be executed again.
+Unpack=yes
+
+# Pause download queue during unpack (yes, no).
+#
+# Enable the option to give CPU more time for unpacking. That helps
+# to speed up unpacking on slow CPUs.
+#
+# NOTE: See also options <ParPauseQueue> and <PostPauseQueue>.
+UnpackPauseQueue=no
+
+# Delete archive files after successful unpacking (yes, no).
+UnpackCleanupDisk=yes
+
+# Full path to unrar executable.
+#
+# Example: "/usr/bin/unrar".
+#
+# If unrar is in your PATH you may leave the path part and set only
+# the executable name ("unrar" on POSIX or "unrar.exe" on Windows).
+UnrarCmd=unrar
+
+# Full path to 7-Zip executable.
+#
+# Example: "/usr/bin/7z".
+#
+# If 7-Zip binary is in your PATH you may leave the path part and set only
+# the executable name ("7z" or "7za" on POSIX or "7z.exe" on Windows).
+SevenZipCmd=7z
+
+
+##############################################################################
 ### POST-PROCESSING                                                        ###
 
 # Set path to program, that must be executed after the download of nzb-file
-# or one collection in nzb-file is completed and possibly par-checked/repaired.
+# is completed and possibly par-checked/repaired and unpacked, depending 
+# on other options.
 #
 # Example: "PostProcess=~/nzbget-postprocess.sh".
 #
-# NOTE: An example script for unrarring is provided within distribution
-# in file "nzbget-postprocess.sh".
+# NOTE: An example script is provided within distribution in file 
+# "nzbget-postprocess.sh".
+#
+# NOTE: Since version 10.0 NZBGet has a built-in support for unpack
+# (option <Unpack>). In the previous versions unpack was performed by
+# post-processing scripts. If you use a script created for older NZBGet
+# version you need to disable the built-in unpack for script to operate
+# properly.
 #
 # INFO FOR DEVELOPERS:
-# NZBGet passes following arguments to postprocess-program as environment
+# If the option <AllowReProcess> is disabled (that's the default setting)
+# the post-processing script is executed once per nzb-file after 
+# par-check/repair (if needed) and unpacking (if enabled).
+#
+# If the option <AllowReProcess> is active the post-processing script is
+# executed for each collection within nzb-file (for nzb-files having multiple
+# collections but at least once). Depending on option <ParCheck> the collection
+# could be already par-checked/repaired or the script could be called without
+# par-check taken place. In the latest case if the script detects errors
+# (such as unpack failed) it has an ability to request par-check from
+# NZBGet. After par-check/repair NZBGet calls the script once again.
+#
+# NZBGet passes following arguments to post-processing script as environment
 # variables:
 #  NZBPP_DIRECTORY    - path to destination dir for downloaded files;
-#  NZBPP_NZBFILENAME  - name of processed nzb-file;
-#  NZBPP_PARFILENAME  - name of par-file or empty string (if no collections were
-#                       found);
+#  NZBPP_NZBNAME      - user-friendly name of processed nzb-file as it is displayed
+#                       by the program. The file path and extension are removed.
+#                       If download was renamed, this parameter reflects the new name;
+#  NZBPP_NZBFILENAME  - name of processed nzb-file. It includes file extension and also
+#                       may include full path;
+#  NZBPP_CATEGORY     - category assigned to nzb-file (can be empty string);
 #  NZBPP_PARSTATUS    - result of par-check:
-#                       0 = not checked: par-check disabled or nzb-file does
+#                       0 = not checked: par-check is disabled or nzb-file does
 #                           not contain any par-files;
 #                       1 = checked and failed to repair;
 #                       2 = checked and successfully repaired;
-#                       3 = checked and can be repaired but repair is disabled;
-#  NZBPP_NZBCOMPLETED - state of nzb-job:
-#                       0 = there are more collections in this nzb-file queued;
-#                       1 = this was the last collection in nzb-file;
+#                       3 = checked and can be repaired but repair is disabled.
+#  NZBPP_UNPACKSTATUS - result of unpack:
+#                       0 = unpack is disabled or was skipped due to nzb-file
+#                           properties or due to errors during par-check;
+#                       1 = unpack failed;
+#                       2 = unpack successful.
+#
+# In addition the following arguments are passed if the option <AllowReProcess>
+# is active:
+#  NZBPP_PARFILENAME  - name of par-file or empty string (if no collections were
+#                       found);
 #  NZBPP_PARFAILED    - indication of failed par-jobs for current nzb-file:
 #                       0 = no failed par-jobs;
 #                       1 = current par-job or any of the previous par-jobs for
 #                           the same nzb-files failed;
-#  NZBPP_CATEGORY     - category assigned to nzb-file (can be empty string).
+#  NZBPP_NZBCOMPLETED - state of nzb-job:
+#                       0 = there are more collections in this nzb-file queued;
+#                       1 = this was the last collection in nzb-file.
 #
 # If nzb-file has associated postprocess-parameters (which can be set using
 # subcommand <O> of command <-E>, for example: NZBGet -E G O "myvar=hello !" 10)
@@ -888,13 +963,14 @@ NzbCleanupDisk=no
 # the values are passed always in lower case.
 #
 # Return value: NZBGet processes the exit code returned by the script:
-#  91 - request NZBGet to do par-check/repair for current collection in the
-#       current nzb-file;
-#  92 - request NZBGet to do par-check/repair for all collections in the
-#       current nzb-file;
 #  93 - post-process successful (status = SUCCESS);
 #  94 - post-process failed (status = FAILURE);
 #  95 - post-process skipped (status = NONE);
+#  91 - request NZBGet to do par-check/repair for current collection in the
+#       current nzb-file. This return code is accepted only if the
+#       option <AllowReProcess> is active;
+#  92 - request NZBGet to do par-check/repair for all collections (par-sets)
+#       in the current nzb-file.
 # All other return codes are interpreted as "status unknown".
 #
 # The return value is used to display the status of post-processing in
@@ -903,62 +979,42 @@ NzbCleanupDisk=no
 # to standard output. For example:
 #   echo "[ERROR] [HISTORY] Unpack failed, not enough disk space";
 #
-# NOTE: The parameter NZBPP_NZBCOMPLETED is very important and MUST be checked
-# even in the simplest scripts.
-# If par-check is enabled and nzb-file contains more than one collection
-# of files the postprocess-program is called after each collection is completed
-# and par-checked. If you want to unpack files or clean up the directory
-# (delete par-files, etc.) there are two possibilities, when you can do this:
-#  1) you parse NZBPP_PARFILENAME to find out the base name of collection and
-#     clean up only files from this collection (not reliable, because par-files
-#     sometimes have different names than rar-files);
-#  2) or you just check the parameters NZBPP_NZBCOMPLETED and NZBPP_PARFAILED
-#     and do the processing, only if NZBPP_NZBCOMPLETED is set to "1" (which
-#     means, that this was the last collection in nzb-file and all files
-#     are now completed) and NZBPP_PARFAILED is set to "0" (no failed par-jobs);
-#
-# NOTE: The term "collection" in the above description actually means
+# NOTE: If the option <AllowReProcess> is active NZBGet calls the script
+# for each collection within nzb-file. The term "collection" actually means
 # "par-set". To determine what "collections" are present in nzb-file NZBGet
 # looks for par-sets. If any collection of files within nzb-file does
 # not have any par-files, this collection will not be detected.
 # For example, for nzb-file containing three collections but only two par-sets,
 # the postprocess will be called two times - after processing of each par-set.
-#
-# NOTE: If NZBGet doesn't find any collections it calls PostProcess once
-# with empty string for parameter NZBPP_PARFILENAME;
-#
-# NOTE: The using of special return values (91 and 92) for requesting of
-# par-check/repair allows to organize the delayed parcheck. To do that:
-#   1) set options: LoadPars=one, ParCheck=no, ParRepair=yes;
-#   2) in post-process-script check the parameter NZBPP_PARSTATUS. If it is "0",
-#      that means, the script is called for the first time. Try to unpack files.
-#      If unpack fails, exit the script with exit code for par-check/repair;
-#   3) NZBGet will start par-check/repair. After that it calls the script again;
-#   4) on second pass the parameter NZBPP_PARSTATUS will have value
-#      greater than "0". If it is "2" ("checked and successfully repaired")
-#      you can try unpack again.
+# If NZBGet doesn't find any collections it calls PostProcess once
+# with empty string for parameter NZBPP_PARFILENAME.
 PostProcess=
 
 # Allow multiple post-processing for the same nzb-file (yes, no).
 #
 # NOTE: Enable this option only if you were advised to do that by the author
-# of the post-process-script.
+# of the post-processing script.
 #
 # NOTE: By enabling <AllowReProcess> you should disable the option <ParCheck>
 # to prevent multiple par-checking.
 #
 # INFO FOR DEVELOPERS:
-# After the post-processing (par-check and call of a postprocess-script) is
-# completed, NZBGet adds the nzb-file to a list of completed-jobs. The nzb-file
-# stays in the list until the last file from that nzb-file is deleted from
-# the download queue (it occurs straight away if the par-check was successful
-# and the option <ParCleanupQueue> is enabled).
-# That means, if a paused file from a nzb-collection becomes unpaused
-# (manually or from a post-process-script) after the collection was already
-# postprocessed NZBGet will not post-process nzb-file again.
-# This prevents the unwanted multiple post-processings of the same nzb-file.
-# But it might be needed if the par-check/-repair are performed not directly
-# by NZBGet but from a post-process-script.
+# This option affects the post-processing in several ways:
+#  1) If the option is active the post-processing script (option <PostProcess>)
+#     is called for each collection (par-set) within nzb-file;
+#  2) The post-processing script may be called multiple times when nzb-file
+#     reaches the state "completely downloaded". This can be needed if 
+#     the par-check/-repair is performed by the post-processing script
+#     (instead of relying on NZBGet's built-in par-check-feature).
+#
+# NOTE: If the built-in unpacking is active (option <Unpack>) this option
+# is ignored (as if it were set to "no").
+#
+# NOTE: If you develop a script depending on this option you should check
+# if the option is active when your script is started and generate an
+# error message if the option is not set correctly. You should also check
+# the option <Unpack> because if it's active the option <AllowReProcess>
+# doesn't work too.
 AllowReProcess=no
 
 # Pause download queue during executing of postprocess-script (yes, no).
@@ -966,7 +1022,7 @@ AllowReProcess=no
 # Enable the option to give CPU more time for postprocess-script. That helps
 # to speed up postprocess on slow CPUs with fast connection (e.g. NAS-devices).
 #
-# NOTE: See also option <ParPauseQueue>.
+# NOTE: See also options <ParPauseQueue> and <UnpackPauseQueue>.
 PostPauseQueue=no
 
 
