updated VC++ project file
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@562 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.vcproj
+++ b/nzbget.vcproj
@@ -496,6 +496,14 @@
 			>
 		</File>
 		<File
+			RelativePath=".\Unpack.cpp"
+			>
+		</File>
+		<File
+			RelativePath=".\Unpack.h"
+			>
+		</File>
+		<File
 			RelativePath=".\UrlCoordinator.cpp"
 			>
 		</File>
