added new option <InterDir> to put intermediate files during download into a separate directory (instead of storing them directly in destination directory (option <DestDir>); when nzb-file is completely (successfully) downloaded, repaired (if neccessary) and unpacked the files are moved to destination directory (option <DestDir> or <CategoryX.DestDir>); intermediate directory can significantly improve unpack performance if it is located on a separate physical hard drive
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@570 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -23,10 +23,30 @@
 #
 # On POSIX you can use "~" as alias for home directory (e.g. "~/download").
 # On Windows use absolute paths (e.g. "C:\Download").
-MainDir=~/download
+MainDir=~/downloads
 
-# Destination-directory to store downloaded files.
+# Destination directory for downloaded files.
+#
+# If you want to distinguish between partially downloaded files and
+# completed downloads, use also option <InterDir>.
 DestDir=${MainDir}/dst
+
+# Directory to store intermediate files.
+#
+# If this option is set (not empty) the files are downloaded into
+# this directory first. After successful download of nzb-file (possibly
+# after par-repair) the files are moved to destination directory
+# (option <DestDir>). If download or unpack fail the files remain in
+# intermediate directory.
+#
+# Using of intermediate directory can significantly improve unpack
+# performance if you can put intermediate directory (option <InterDir>)
+# and destination directory (option <DestDir>) on separate physical
+# hard drives.
+#
+# NOTE: If the option <InterDir> is set to empty value the downloaded
+# files are put directly to destination directory (option <DestDir>).
+InterDir=
 
 # Directory to monitor for incoming nzb-jobs.
 #
@@ -39,11 +59,6 @@ NzbDir=${MainDir}/nzb
 QueueDir=${MainDir}/queue
 
 # Directory to store temporary files.
-#
-# NOTE: When option <DirectWrite> is enabled the temporary directory (option
-# <TempDir>) must be located on the same partition with destination directory
-# (option <DestDir>) for better performance. If option <DirectWrite> is disabled
-# it's better to use different drives for temporary and destination directories.
 TempDir=${MainDir}/tmp
 
 # Lock-file for daemon-mode, POSIX only.
